believe I fixed the spacing issue

--- a/src/components/Products.css
+++ b/src/components/Products.css
@@ -16,7 +16,7 @@
 
 .products--card {
     padding: 0 !important;
-    margin-bottom: 20px;
+    margin: 0 2.5px 20px 2.5px;
 }
 
 .products--card-body {
